--- a/Backend/static/CSS/adminPage.css
+++ b/Backend/static/CSS/adminPage.css
@@ -1,14 +1,14 @@
 body {
 
     font-family: Arial, Helvetica, sans-serif;
-    background-color: white;
     /* background-image: url("../static/Images/ipl1.webp"); */
     background-size: cover;
     background-attachment: fixed;
     /* font-family: arial; */
-    background: #833ab4;
-    background: -webkit-linear-gradient(to right, #fcb045, #fd1d1d, #833ab4);
+    /* background: #833ab4; */
+    /* background: -webkit-linear-gradient(to right, #fcb045, #fd1d1d, #833ab4);*/
     background: linear-gradient(to right, #fcb045, #fd1d1d, #833ab4);
+    background-color: lightskyblue;
 }
 
 .main-text {
@@ -93,7 +93,11 @@ body {
 .pad {
     margin: 30px;
     margin-top: 150px;
+    transform: scale(1.0);
+    background-color: black;
+
 }
+
 
 
 .heading {
@@ -108,24 +112,6 @@ body {
     animation-timing-function: linear;
 }
 
-
-@keyframes sample {
-    0% {
-        color: rgb(0, 0, 0);
-    }
-
-    25% {
-        color: rgb(19, 1, 59);
-    }
-
-    50% {
-        color: rgb(0, 41, 75);
-    }
-
-    100% {
-        color: crimson;
-    }
-}
 
 .Dashboard {
     text-align: center;
