--- a/Backend/templates/BookNowNew.html
+++ b/Backend/templates/BookNowNew.html
@@ -104,8 +104,8 @@
                   
         </li>
         <li>
-            <a href="/SeatBooking"><button type="submit" class="btn btn-primary  btnsubmit">BookNow
-            </button></a>
+            <!-- <a href="/seatbooking"><button type="submit" class="btn btn-primary  btnsubmit">BookNow
+            </button></a> -->
         </li>
             
         
