--- a/Backend/templates/BookTheater.html
+++ b/Backend/templates/BookTheater.html
@@ -67,9 +67,9 @@
         integrity="sha384-B4gt1jrGC7Jh4AgTPSdUtOBvfO8shuf57BaghqFfPlYxofvL8/KUEfYiJOMMV+rV"
         crossorigin="anonymous"></script>
     <div class='heading'>
-        <marquee behavior="alternate" direction="left" scrollamount="15">
+        <!-- <marquee behavior="alternate" direction="left" scrollamount="15">
             <h1>Book Your Show</h1>
-        </marquee>
+        </marquee> -->
     </div>
     <br>
     <!------------------------------------------------------------------------------------------------------------>
@@ -80,7 +80,7 @@
             <div class="col">
                 <ul class="list-inline mx-auto justify-content-center">
                     <li>
-                        <a href="/SeatBooking"><button type="button"   class="btn btn-success tile" id="tile"
+                        <a href="/seatbooking"><button type="button"   class="btn btn-danger tile" id="tile"
                                 style="width: 200px; height: 200px; font-size: 35px; text-align: center;">
 
                                 {{k[0]}}
