--- a/Backend/templates/home.html
+++ b/Backend/templates/home.html
@@ -30,7 +30,7 @@
                     <li><a class="dropdown-item active" href="#">Bhopal</a></li>
                     <li><a class="dropdown-item" href="#">Indore</a></li>
                     <li><a class="dropdown-item" href="#">Mumbai</a></li>
-                    <!-- <li>
+                     <li>
                         <hr class="dropdown-divider">
                     </li> -->
                 <!--<li><a class="dropdown-item" href="#">Bangalore</a></li>
@@ -71,7 +71,7 @@
             <!--rec_movie_1-->
             {%for j,i in enumerate(result)%}
 
-            <a href="/test/{{result[j][1]}}"><img alt="" class="row_poster row_posterLarge m-2"
+            <a href="/test/{{result[j][1]}}"><img alt="" class="row_poster row_posterLarge m-3"
                 src="static/uploading/{{j+num}}.jpg"></a>
 
             {%endfor%}
@@ -117,13 +117,13 @@
     <div class="row">
         <h2 class="text">TRENDING NOW</h2>
         <div class="row_posters">
-            <img src="{{ url_for('static', filename='/Images/img1.jpg') }}" alt="" class="row_poster">
-            <img src="{{ url_for('static', filename='/Images/img2.jpg') }}" alt="" class="row_poster">
-            <img src="{{ url_for('static', filename='/Images/img3.jpg') }}" alt="" class="row_poster">
-            <img src="{{ url_for('static', filename='/Images/img4.jpg') }}" alt="" class="row_poster">
-            <img src="{{ url_for('static', filename='/Images/img5.jpg') }}" alt="" class="row_poster">
-            <img src="{{ url_for('static', filename='/Images/img6.jpg') }}" alt="" class="row_poster">
-            <img src="{{ url_for('static', filename='/Images/img7.jpg') }}" alt="" class="row_poster">
+            <img src="{{ url_for('static', filename='/Images/img1.jpg') }}" alt="" class="row_poster row_posterLarge m-3">
+            <img src="{{ url_for('static', filename='/Images/img2.jpg') }}" alt="" class="row_poster row_posterLarge m-3">
+            <img src="{{ url_for('static', filename='/Images/img3.jpg') }}" alt="" class="row_poster row_posterLarge m-3">
+            <img src="{{ url_for('static', filename='/Images/img4.jpg') }}" alt="" class="row_poster row_posterLarge m-3">
+            <img src="{{ url_for('static', filename='/Images/img5.jpg') }}" alt="" class="row_poster row_posterLarge m-3">
+            <img src="{{ url_for('static', filename='/Images/img6.jpg') }}" alt="" class="row_poster row_posterLarge m-3">
+            <img src="{{ url_for('static', filename='/Images/img7.jpg') }}" alt="" class="row_poster row_posterLarge m-3">
 
             <!-- <img src="/Images/img1.jpg" alt="" class="row_poster">
             <img src="/Images/img2.jpg" alt="" class="row_poster">
@@ -139,13 +139,13 @@
     <div class="row">
         <h2 class="text">TOP RATED </h2>
         <div class="row_posters">
-            <img src="{{ url_for('static', filename='/Images/img1.jpg') }}" alt="" class="row_poster">
-            <img src="{{ url_for('static', filename='/Images/img2.jpg') }}" alt="" class="row_poster">
-            <img src="{{ url_for('static', filename='/Images/img3.jpg') }}" alt="" class="row_poster">
-            <img src="{{ url_for('static', filename='/Images/img4.jpg') }}" alt="" class="row_poster">
-            <img src="{{ url_for('static', filename='/Images/img5.jpg') }}" alt="" class="row_poster">
-            <img src="{{ url_for('static', filename='/Images/img6.jpg') }}" alt="" class="row_poster">
-            <img src="{{ url_for('static', filename='/Images/img7.jpg') }}" alt="" class="row_poster">
+            <img src="{{ url_for('static', filename='/Images/img1.jpg') }}" alt="" class="row_poster row_posterLarge m-3">
+            <img src="{{ url_for('static', filename='/Images/img2.jpg') }}" alt="" class="row_poster row_posterLarge m-3">
+            <img src="{{ url_for('static', filename='/Images/img3.jpg') }}" alt="" class="row_poster row_posterLarge m-3">
+            <img src="{{ url_for('static', filename='/Images/img4.jpg') }}" alt="" class="row_poster row_posterLarge m-3">
+            <img src="{{ url_for('static', filename='/Images/img5.jpg') }}" alt="" class="row_poster row_posterLarge m-3">
+            <img src="{{ url_for('static', filename='/Images/img6.jpg') }}" alt="" class="row_poster row_posterLarge m-3">
+            <img src="{{ url_for('static', filename='/Images/img7.jpg') }}" alt="" class="row_poster row_posterLarge m-3">
 
             <!-- <img src="/Images/img1.jpg" alt="" class="row_poster">
             <img src="/Images/img2.jpg" alt="" class="row_poster">
