--- a/Backend/templates/SeatBooking.html
+++ b/Backend/templates/SeatBooking.html
@@ -2,7 +2,7 @@
 <html lang="en">
 
 <head>
-    <meta charset="UTF-8" /> 
+    <meta charset="UTF-8" />
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
     <meta http-equiv="X-UA-Compatible" content="ie=edge" />
     <title>Movie Seat Booking</title>
@@ -126,15 +126,7 @@
 <body>
     <!-- <form class="form"> -->
 
-
-
     <!-- </form> -->
-
-
-
-
-
-
 
     <div>
         <img class="main-logo" src="{{ url_for('static', filename='/Images/img1.jpg') }}" />
@@ -159,16 +151,16 @@
             <div id="seat" class="seat selected"></div>
             <small class="status" style="font-size: 2em;">Selected</small>
         </li>
-        <li>
+        <!-- <li>
             <div id="seat" class="seat occupied"></div>
             <small class="status" style="font-size: 2em;">Occupied</small>
-        </li>
+        </li> -->
     </ul>
 
     <form action="/paynow" method="POST">
 
-    <div class="container">
-        <div class="screen" id="display">BookYourShow</div>
+        <div class="container">
+            <div class="screen" id="display">BookYourShow</div>
 
 
             <div class="row">
@@ -179,7 +171,7 @@
 
 
                 <div class="inputGroup">
-                    <input id="option1{{i+1}}" name="seat1{{i+1}}" type="checkbox" value = "A{{i+1}}"/>
+                    <input id="option1{{i+1}}" name="seat1{{i+1}}" type="checkbox" value="A{{i+1}}" />
                     <label for="option1{{i+1}}">A{{i+1}}</label>
                 </div> &emsp;
                 {%endfor%}
@@ -192,7 +184,7 @@
                 <!-- <input type="checkbox" id="seat6" name="seat6" class="seat" onclick="ChangeColor('seat6')" value="B{{i+1}}">-->
 
                 <div class="inputGroup">
-                    <input id="option2{{i+1}}" name="seat2{{i+1}}" type="checkbox" value = "B{{i+1}}"/>
+                    <input id="option2{{i+1}}" name="seat2{{i+1}}" type="checkbox" value="B{{i+1}}" />
                     <label for="option2{{i+1}}">B{{i+1}}</label>
                 </div> &emsp;
 
@@ -206,7 +198,7 @@
 
 
                 <div class="inputGroup">
-                    <input id="option3{{i+1}}" name="seat3{{i+1}}" type="checkbox" value = "C{{i+1}}"/>
+                    <input id="option3{{i+1}}" name="seat3{{i+1}}" type="checkbox" value="C{{i+1}}" />
                     <label for="option3{{i+1}}">C{{i+1}}</label>
                 </div> &emsp;
 
@@ -222,7 +214,7 @@
                     onclick="ChangeColor('seat18')">D{{i+1}}</button> </a> -->
 
                 <div class="inputGroup">
-                    <input id="option4{{i+1}}" name="seat4{{i+1}}" type="checkbox" value = "D{{i+1}}"/>
+                    <input id="option4{{i+1}}" name="seat4{{i+1}}" type="checkbox" value="D{{i+1}}" />
                     <label for="option4{{i+1}}">D{{i+1}}</label>
                 </div> &emsp;
 
@@ -235,7 +227,7 @@
                 <!-- <button id="seat29" name="seat29" class="seat" onclick="ChangeColor('seat29')">E{{i+1}}</button> -->
 
                 <div class="inputGroup">
-                    <input id="option5{{i+1}}" name="seat5{{i+1}}" type="checkbox" value = "E{{i+1}}"/>
+                    <input id="option5{{i+1}}" name="seat5{{i+1}}" type="checkbox" value="E{{i+1}}" />
                     <label for="option5{{i+1}}">E{{i+1}}</label>
                 </div> &emsp;
 
@@ -247,44 +239,36 @@
 
                 <!-- <button id="seat35" name="seat35" class="seat" onclick="ChangeColor('seat35')">F{{i+1}}</button> -->
                 <div class="inputGroup">
-                    <input id="option6{{i+1}}" name="seat6{{i+1}}" type="checkbox" value = "F{{i+1}}"/>
+                    <input id="option6{{i+1}}" name="seat6{{i+1}}" type="checkbox" value="F{{i+1}}" />
                     <label for="option6{{i+1}}">F{{i+1}}</label>
                 </div> &emsp;
 
                 {%endfor%}
 
-               
-    </div>
-    </div>
 
-    <br><br><br>
-
-    <div class="col-sm d-flex justify-content-center">
-        <button type="submit" class="btn-paynow" id="paynow">
-            Paynow
-        </button>
-    </div>
-</form>
-
-    <!-- <p class="text" style="font-size: 1em;margin:0px 0px 15px 0px">
-        You have selected <span id="count">0</span> s
-        eats for a price of $<span id="total">0</span>
-    </p> -->
-
-    <div class="row">
-        <div class="col-sm d-flex justify-content-center">
-            <a href="/">
-                <button class="btn-home">
-                    Home
-                </button>
-            </a>
+            </div>
         </div>
-    </div>
+
+        <br>
+
+        <div class="col-sm d-flex justify-content-center">
+            <button type="submit" class="btn" id="paynow">
+                Paynow
+            </button>
+<!--             
+            <a href="../templates/home.html"><button type="button" class="btn"  id="paynow">
+                Home
+            </button></a> -->
+
+        </div>
+
+    </form>
+
 
     <script type="module" src="{{ url_for('static', filename='/JS/SeatBooking.js') }}">
         localStorage.setItem("token", "{{token}}");
     </script>
-   
+
 </body>
 
 </html>
