ui changes  of navbar

--- a/Backend/templates/BookTheater.html
+++ b/Backend/templates/BookTheater.html
@@ -19,14 +19,14 @@
     <nav class="navbar navbar-expand-lg navbar-dark bg-dark">
         <div class="container-fluid">
             <a>
-                <img src="../static/Images/logo.png" alt="" width="100" height="40"
+                <img src="../static/Images/logo.png" alt="" width="150" height="68"
                     class="d-inline-block align-text-top">
             </a>
             <button class="navbar-toggler" type="button" data-bs-toggle="collapse" data-bs-target="#navbarNavDropdown"
                 aria-controls="navbarNavDropdown" aria-expanded="false" aria-label="Toggle navigation">
                 <span class="navbar-toggler-icon"></span>
             </button>
-            <h1 style="color: white; font-family: serif; margin-right: 700px;" class="Dashboard">Book Theater</h1>
+            <h1 style="color: white; margin-right: 700px; font-family: cursive;" class="Dashboard">Book Theater</h1>
 
         </div>
     </nav>
