--- a/Backend/templates/home.html
+++ b/Backend/templates/home.html
@@ -40,7 +40,7 @@
             </div>
 
 
-            <div class="text" id="userName" placeholder="12323">bhgn </div>
+            <div class="text" id="userName" placeholder="12323"> </div>
 
 
 
