Basic Changes In UI

--- a/Backend/static/CSS/SeatBooking.css
+++ b/Backend/static/CSS/SeatBooking.css
@@ -12,7 +12,7 @@
 }
 
 body {
-    /* background-image: url("/Images/thor8.png"); */
+    /* /* background-image: url("/Images/thor8.png");  */
     background-color: black;
     color: #fff;
     display: flex;
