--- a/Backend/static/CSS/styles.css
+++ b/Backend/static/CSS/styles.css
@@ -4,7 +4,7 @@
 body {
 
     font-family: Arial, Helvetica, sans-serif;
-    background-color: #111;
+    /* background-color: #111; */
 }
 
 .row {
@@ -32,6 +32,7 @@ body {
 
 }
 
+
 .row_poster:hover {
     transform: scale(1.20);
 }
@@ -41,7 +42,11 @@ body {
 }
 
 .row_posterLarge:hover {
-    transform: scale(1.20);
+    transform: scale(1.25);
+    /* transform: rotateX(150deg); */
+    /* transform: rotateY(150deg); */
+    /* transform: rotateZ(90deg); */
+
 }
 
 
@@ -53,7 +58,7 @@ body {
 }
 
 /* removing scroll bar */
-.row_posters::-webkit-scrollbar {
+.row_poster::-webkit-scrollbar {
     /* display: none; */
 }
 
@@ -82,6 +87,7 @@ body {
     font-size: 3rem;
     font-weight: 800;
     padding-bottom: 0.3rem;
+    font-family: Arial, Helvetica, sans-serif;
 }
 
 /* .banner_description {
@@ -106,7 +112,7 @@ body {
     margin-top: 0.5rem;
     padding-top: 0.5rem;
     padding-bottom: 0.5rem;
-    background-color: rgba(86, 82, 82, 0.5);
+    background-color: rgb(27, 23, 23);
     user-select: none;
 
 }
@@ -117,19 +123,25 @@ body {
     transition: all 0.2s;
 }
 
-.banner--fadeBottom {
+.banner_description{
+    color: white;
+    /* font-size: larger; */
+    font-weight: 950;
+}
+
+/* .banner--fadeBottom {
     margin-top: 145px;
     height: 7.4rem;
     /* background-image: linear-gradient(180deg, transparent, rgba(37, 37, 37, 0.61), #111); */
-    user-select: none;
+    /* user-select: none; 
 
-}
+}*/
 
-.nav {
+/* .nav {
     user-select: none;
     padding-bottom: 15px;
     padding-top: 15px;
-}
+} */
 
 .nav_logo {
     width: 150px;
@@ -143,35 +155,18 @@ body {
     background-color: #111;
 }
 
-.maintext {
-    font-family: cursive;
-    font-weight: 900;
-    font-size: 45px;
-    color: white;
-    /* background: black; */
-    opacity: 65%;
-    margin-left: 50px;
-    user-select: none;
-}
 
 .text {
     font-family: cursive;
     font-weight: 900;
-    font-size: 35px;
-    margin-top: 50px;
+    font-size: 45px;
     color: white;
-    /* background: black; */
     opacity: 65%;
-    margin-left: 50px;
     user-select: none;
+    float: left;
 }
 
-.dropdown {
-    object-fit: contain;
-    margin-left: 500px;
-    user-select: none;
 
-}
 
 .signin:hover {
     color: #000;
@@ -187,4 +182,17 @@ body {
 }
 .btn-ligt{
     margin-top: 10px;
+}
+
+.carousel-item {
+    height: 500px;
+    width: 100%;
+}
+
+.itemImg {
+    position: absolute;
+    top: 0;
+    left: 0;
+    height: 500px;
+    width: 100%;
 }
