--- a/Backend/templates/home.html
+++ b/Backend/templates/home.html
@@ -10,7 +10,7 @@
     <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.1.3/dist/css/bootstrap.min.css" rel="stylesheet">
     <link rel="stylesheet" href="{{ url_for('static', filename='/CSS/styles.css')}}">
     <link rel="stylesheet" href="{{ url_for('static', filename='/CSS/adminPage.css') }}">
-
+    
 
 </head>
 
@@ -21,30 +21,13 @@
     <nav class="navbar navbar-dark bg-dark">
         <!-- Navbar content -->
         <div class="container-fluid">
-            <!-- <a class="navbar-brand">BookYourShow</a> -->
 
             <img src="{{ url_for('static', filename='/Images/logo1.png') }}" alt="" class="nav_logo">
-            <div class="maintext">BookYourShow</div>
-            <div class="dropdown">
-                <!-- <button class="btn btn-secondary dropdown-toggle" type="button" id="dropdownMenuButton2"
-                    data-bs-toggle="dropdown" aria-expanded="false">
-                    Select Cities
-                </button>
-                <ul class="dropdown-menu dropdown-menu-dark" aria-labelledby="dropdownMenuButton2">
-                    <li><a class="dropdown-item active" href="#">Bhopal</a></li>
-                    <li><a class="dropdown-item" href="#">Indore</a></li>
-                    <li><a class="dropdown-item" href="#">Mumbai</a></li>
-                     <li>
-                        <hr class="dropdown-divider">
-                    </li> -->
-                <!--<li><a class="dropdown-item" href="#">Bangalore</a></li>
-                    <li><a class="dropdown-item" href="#">Pune</a></li>
+            <div class="text">BookYourShow</div>
+        
 
-                </ul> -->
-            </div>
-
-            <div class="text" id="userName" placeholder="12323"></div>
-            <a href="/"><button type="button" class="btn btn-light  signin">Log Out</button></a>
+            <div class="text" id="userName"></div>
+            <a href="/"><button type="button" class="btn btn-danger ">Log Out</button></a>
 
         </div>
     </nav>
@@ -59,11 +42,13 @@
                 <a href=""><button class="banner_button">My List</button></a>
             </div>
             <div class="banner_description">
-                <!-- This is our banner banner_description -->
+                Hi ! Welcome to BookYourShow
             </div>
         </div>
         <div class="banner--fadeBottom"></div>
     </div>
+
+    
 
     <!--Netflix Originals-->
     <div class="row">
@@ -98,14 +83,6 @@
                 class="row_poster row_posterLarge m-3">
             <img src="{{ url_for('static', filename='/Images/img4.jpg') }}" alt=""
                 class="row_poster row_posterLarge m-3">
-
-            <!-- <img src="/Images/img1.jpg" alt="" class="row_poster">
-            <img src="/Images/img2.jpg" alt="" class="row_poster">
-            <img src="/Images/img3.jpg" alt="" class="row_poster">
-            <img src="/Images/img4.jpg" alt="" class="row_poster">
-            <img src="/Images/img5.jpg" alt="" class="row_poster">
-            <img src="/Images/img6.jpg" alt="" class="row_poster">
-            <img src="/Images/img7.jpg" alt="" class="row_poster"> -->
         </div>
     </div>
 
@@ -127,14 +104,6 @@
                 class="row_poster row_posterLarge m-3">
             <img src="{{ url_for('static', filename='/Images/img7.jpg') }}" alt=""
                 class="row_poster row_posterLarge m-3">
-
-            <!-- <img src="/Images/img1.jpg" alt="" class="row_poster">
-            <img src="/Images/img2.jpg" alt="" class="row_poster">
-            <img src="/Images/img3.jpg" alt="" class="row_poster">
-            <img src="/Images/img4.jpg" alt="" class="row_poster">
-            <img src="/Images/img5.jpg" alt="" class="row_poster">
-            <img src="/Images/img6.jpg" alt="" class="row_poster">
-            <img src="/Images/img7.jpg" alt="" class="row_poster"> -->
         </div>
     </div>
 
