--- a/Backend/templates/home.html
+++ b/Backend/templates/home.html
@@ -32,137 +32,116 @@
     </div>
   </nav>
 
+
   <!--header-->
 
   <div id="carouselExampleControls" class="carousel slide" data-bs-ride="carousel">
     <div class="carousel-inner">
       <div class="carousel-item active">
-        <img class="itemImg" src="{{ url_for('static', filename='/Images/ipl2.png') }}" alt="...">
+        <img class="itemImg" src="{{ url_for('static', filename='/Images/front11.jpg') }}" alt="...">
         <div class="carousel-caption d-none d-md-block">
-          <h1 class="banner_title">IPL 2022 Is Live</h1>
-          <a href="https://www.youtube.com/watch?v=AIS_pwj51hA"><button class="banner_button"
-              style="background-color: black;">Play</button></a>
-          <a href=""><button class="banner_button" style="background-color: black;">My List</button></a>
+          <!-- <h1 class="banner_title" >IPL 2022 Is Live</h1> -->
+          <a href="https://www.youtube.com/watch?v=3KrIGNn8aBY"><button class="banner_button">Play</button></a>
+          <!--<a href=""><button class="banner_button" style="background-color: black;">My List</button></a> -->
         </div>
-    </nav>
-
-    <!--header-->
-
-    <div id="carouselExampleControls" class="carousel slide" data-bs-ride="carousel">
-        <div class="carousel-inner">
-            <div class="carousel-item active">
-                <img class="itemImg" src="{{ url_for('static', filename='/Images/front11.jpg') }}" alt="...">
-                <div class="carousel-caption d-none d-md-block">
-                    <!-- <h1 class="banner_title" >IPL 2022 Is Live</h1> -->
-                    <!-- <a href="https://www.youtube.com/watch?v=AIS_pwj51hA"><button class="banner_button"
-                            style="background-color: black;">Play</button></a>
-                    <a href=""><button class="banner_button" style="background-color: black;">My List</button></a> -->
-                </div>
-            </div>
-            <div class="carousel-item">
-                <img class="itemImg" src="{{ url_for('static', filename='/Images/front7.jpg') }}" alt="...">
-                <div class="carousel-caption d-none d-md-block">
-                    <!-- <h1 class="banner_title" >IPL 2022 Is Live</h1> -->
-                    <!-- <a href="https://www.youtube.com/watch?v=AIS_pwj51hA"><button class="banner_button"
-                            style="background-color: black;">Play</button></a>
-                    <a href=""><button class="banner_button" style="background-color: black;">My List</button></a> -->
-                </div>
-            </div>
-            <div class="carousel-item">
-                <img class="itemImg" src="{{ url_for('static', filename='/Images/front3.jpg') }}" alt="...">
-                <div class="carousel-caption d-none d-md-block">
-                    <!-- <h1 class="banner_title" >IPL 2022 Is Live</h1> -->
-                    <!-- <a href="https://www.youtube.com/watch?v=AIS_pwj51hA"><button class="banner_button"
-                            style="background-color: black;">Play</button></a>
-                    <a href=""><button class="banner_button" style="background-color: black;">My List</button></a> -->
-                </div>
-            </div>
-            <div class="carousel-item">
-                <img class="itemImg" src="{{ url_for('static', filename='/Images/front4.jpg') }}" alt="...">
-                <div class="carousel-caption d-none d-md-block">
-                    <!-- <h1 class="banner_title" >IPL 2022 Is Live</h1> -->
-                    <!-- <a href="https://www.youtube.com/watch?v=AIS_pwj51hA"><button class="banner_button"
-                            style="background-color: black;">Play</button></a>
-                    <a href=""><button class="banner_button" style="background-color: black;">My List</button></a> -->
-                </div>
-            </div>
-
-            <div class="carousel-item">
-                <img class="itemImg" src="{{ url_for('static', filename='/Images/front9.jpg') }}" alt="...">
-                <div class="carousel-caption d-none d-md-block">
-                    <!-- <h1 class="banner_title" >IPL 2022 Is Live</h1> -->
-                    <!-- <a href="https://www.youtube.com/watch?v=AIS_pwj51hA"><button class="banner_button"
-                            style="background-color: black;">Play</button></a>
-                    <a href=""><button class="banner_button" style="background-color: black;">My List</button></a> -->
-                </div>
-            </div>
-
-
-            <div class="carousel-item">
-                <img class="itemImg" src="{{ url_for('static', filename='/Images/front10.jpg') }}" alt="...">
-                <div class="carousel-caption d-none d-md-block">
-                    <!-- <h1 class="banner_title" >IPL 2022 Is Live</h1> -->
-                    <!-- <a href="https://www.youtube.com/watch?v=AIS_pwj51hA"><button class="banner_button"
-                            style="background-color: black;">Play</button></a>
-                    <a href=""><button class="banner_button" style="background-color: black;">My List</button></a> -->
-                </div>
-            </div>
-
-
-
-            <div class="carousel-item">
-                <img class="itemImg" src="{{ url_for('static', filename='/Images/front8.jpg') }}" alt="...">
-                <div class="carousel-caption d-none d-md-block">
-                    <!-- <h1 class="banner_title" >IPL 2022 Is Live</h1> -->
-                    <!-- <a href="https://www.youtube.com/watch?v=AIS_pwj51hA"><button class="banner_button"
-                            style="background-color: black;">Play</button></a>
-                    <a href=""><button class="banner_button" style="background-color: black;">My List</button></a> -->
-                </div>
-            </div>
-
-
-
-            <div class="carousel-item">
-                <img class="itemImg" src="{{ url_for('static', filename='/Images/front12.jpg') }}" alt="...">
-                <div class="carousel-caption d-none d-md-block">
-                    <!-- <h1 class="banner_title" >IPL 2022 Is Live</h1> -->
-                    <!-- <a href="https://www.youtube.com/watch?v=AIS_pwj51hA"><button class="banner_button"
-                            style="background-color: black;">Play</button></a>
-                    <a href=""><button class="banner_button" style="background-color: black;">My List</button></a> -->
-                </div>
-            </div>
-
+      </div>
+      <div class="carousel-item">
+        <img class="itemImg" src="{{ url_for('static', filename='/Images/front7.jpg') }}" alt="...">
+        <div class="carousel-caption d-none d-md-block">
+          <!-- <h1 class="banner_title" >IPL 2022 Is Live</h1> -->
+          <a href="https://www.youtube.com/watch?v=AIS_pwj51hA"><button class="banner_button">Play</button></a>
+          <!--<a href=""><button class="banner_button" style="background-color: black;">My List</button></a> -->
         </div>
-    </div>
+      </div>
+      <div class="carousel-item">
+        <img class="itemImg" src="{{ url_for('static', filename='/Images/front3.jpg') }}" alt="...">
+        <div class="carousel-caption d-none d-md-block">
+          <!-- <h1 class="banner_title" >IPL 2022 Is Live</h1> -->
+          <a href="https://www.youtube.com/watch?v=_uC7VmUhxJQ"><button class="banner_button">Play</button></a>
+          <!--<a href=""><button class="banner_button" style="background-color: black;">My List</button></a> -->
+        </div>
+      </div>
+      <div class="carousel-item">
+        <img class="itemImg" src="{{ url_for('static', filename='/Images/front4.jpg') }}" alt="...">
+        <div class="carousel-caption d-none d-md-block">
+          <!-- <h1 class="banner_title" >IPL 2022 Is Live</h1> -->
+          <a href="https://www.youtube.com/watch?v=AIS_pwj51hA"><button class="banner_button">Play</button></a>
+          <!--  <a href=""><button class="banner_button" style="background-color: black;">My List</button></a> -->
+        </div>
+      </div>
+
+      <div class="carousel-item">
+        <img class="itemImg" src="{{ url_for('static', filename='/Images/front9.jpg') }}" alt="...">
+        <div class="carousel-caption d-none d-md-block">
+          <!-- <h1 class="banner_title" >IPL 2022 Is Live</h1> -->
+          <a href="https://www.youtube.com/watch?v=9Vo5YjwIALQ"><button class="banner_button">Play</button></a>
+          <!--<a href=""><button class="banner_button" style="background-color: black;">My List</button></a> -->
+        </div>
+      </div>
+
+
+      <div class="carousel-item">
+        <img class="itemImg" src="{{ url_for('static', filename='/Images/front10.jpg') }}" alt="...">
+        <div class="carousel-caption d-none d-md-block">
+          <!-- <h1 class="banner_title" >IPL 2022 Is Live</h1> -->
+          <a href="https://www.youtube.com/watch?v=AIS_pwj51hA"><button class="banner_button">Play</button></a>
+          <!-- <a href=""><button class="banner_button" style="background-color: black;">My List</button></a> -->
+        </div>
+      </div>
 
 
 
-    <button class="carousel-control-prev" type="button" data-bs-target="#carouselExampleControls" data-bs-slide="prev">
-        <span class="carousel-control-prev-icon" aria-hidden="true"></span>
-        <span class="visually-hidden">Previous</span>
-    </button>
-    <button class="carousel-control-next" type="button" data-bs-target="#carouselExampleControls" data-bs-slide="next">
-        <span class="carousel-control-next-icon" aria-hidden="true"></span>
-        <span class="visually-hidden">Next</span>
-    </button>
+      <div class="carousel-item">
+        <img class="itemImg" src="{{ url_for('static', filename='/Images/front8.jpg') }}" alt="...">
+        <div class="carousel-caption d-none d-md-block">
+          <!-- <h1 class="banner_title" >IPL 2022 Is Live</h1> -->
+          <a href="https://www.youtube.com/watch?v=9Vo5YjwIALQ"><button class="banner_button">Play</button></a>
+          <!-- <a href=""><button class="banner_button" style="background-color: black;">My List</button></a> -->
+        </div>
+      </div>
+
+
+
+      <div class="carousel-item">
+        <img class="itemImg" src="{{ url_for('static', filename='/Images/front12.jpg') }}" alt="...">
+        <div class="carousel-caption d-none d-md-block">
+          <!-- <h1 class="banner_title" >IPL 2022 Is Live</h1> -->
+          <a href="https://www.youtube.com/watch?v=3KrIGNn8aBY"><button class="banner_button">Play</button></a>
+          <!-- <a href=""><button class="banner_button" style="background-color: black;">My List</button></a> -->
+        </div>
+      </div>
+
     </div>
   </div>
 
 
-    <!--Netflix Originals-->
-    <div class="row">
-        <h2 class="text">RECOMMENDED MOVIES</h2>
-        <div class="row_posters">
 
-            {%for j,i in enumerate(result)%}
+  <button class="carousel-control-prev" type="button" data-bs-target="#carouselExampleControls" data-bs-slide="prev">
+    <span class="carousel-control-prev-icon" aria-hidden="true"></span>
+    <span class="visually-hidden">Previous</span>
+  </button>
+  <button class="carousel-control-next" type="button" data-bs-target="#carouselExampleControls" data-bs-slide="next">
+    <span class="carousel-control-next-icon" aria-hidden="true"></span>
+    <span class="visually-hidden">Next</span>
+  </button>
+  </div>
+  </div>
 
-            <a href="/test/{{result[j][1]}}"><img alt="" class="row_poster row_posterLarge m-3"
-                    src="static/uploading/{{j+num}}.jpg"></a>
-            {%endfor%}
 
-        </div>
+  <!--Netflix Originals-->
+  <div class="row">
+    <h2 class="text">RECOMMENDED MOVIES</h2>
+    <div class="row_posters">
+
+      {%for j,i in enumerate(result)%}
+
+      <a href="/test/{{result[j][1]}}"><img alt="" class="row_poster row_posterLarge m-3"
+          src="static/uploading/{{j+num}}.jpg"></a>
+      {%endfor%}
+
     </div>
-  
+  </div>
+
 
 
   <!--Trending Now-->
@@ -184,48 +163,36 @@
     </div>
   </div>
 
-    <!--Top Rated-->
-    <div class="row">
-        <h2 class="text">TOP RATED </h2>
-        <div class="row_posters">
+  <!--Top Rated-->
+  <div class="row">
+    <h2 class="text">TOP RATED </h2>
+    <div class="row_posters">
 
 
 
-            <img src="{{ url_for('static', filename='/Images/img100.jpg') }}" alt=""
-                class="row_poster row_posterLarge m-3">
+      <img src="{{ url_for('static', filename='/Images/img100.jpg') }}" alt="" class="row_poster row_posterLarge m-3">
 
-            <img src="{{ url_for('static', filename='/Images/kgf.jpg') }}" alt=""
-                class="row_poster row_posterLarge m-3">
+      <img src="{{ url_for('static', filename='/Images/kgf.jpg') }}" alt="" class="row_poster row_posterLarge m-3">
 
-            <img src="{{ url_for('static', filename='/Images/RRR.jpg') }}" alt=""
-                class="row_poster row_posterLarge m-3">
+      <img src="{{ url_for('static', filename='/Images/RRR.jpg') }}" alt="" class="row_poster row_posterLarge m-3">
 
-            <img src="{{ url_for('static', filename='/Images/img103.jpg') }}" alt=""
-                class="row_poster row_posterLarge m-3">
+      <img src="{{ url_for('static', filename='/Images/img103.jpg') }}" alt="" class="row_poster row_posterLarge m-3">
 
-            <img src="{{ url_for('static', filename='/Images/img102.jpg') }}" alt=""
-                class="row_poster row_posterLarge m-3">
+      <img src="{{ url_for('static', filename='/Images/img102.jpg') }}" alt="" class="row_poster row_posterLarge m-3">
 
 
-            <img src="{{ url_for('static', filename='/Images/img1.jpg') }}" alt=""
-                class="row_poster row_posterLarge m-3">
-            <img src="{{ url_for('static', filename='/Images/img2.png') }}" alt=""
-                class="row_poster row_posterLarge m-3">
-            <img src="{{ url_for('static', filename='/Images/img3.jpg') }}" alt=""
-                class="row_poster row_posterLarge m-3">
-            <img src="{{ url_for('static', filename='/Images/img4.jpg') }}" alt=""
-                class="row_poster row_posterLarge m-3">
-            <img src="{{ url_for('static', filename='/Images/img5.jpg') }}" alt=""
-                class="row_poster row_posterLarge m-3">
-            <img src="{{ url_for('static', filename='/Images/img6.jpg') }}" alt=""
-                class="row_poster row_posterLarge m-3">
-            <img src="{{ url_for('static', filename='/Images/img7.jpg') }}" alt=""
-                class="row_poster row_posterLarge m-3">
+      <img src="{{ url_for('static', filename='/Images/img1.jpg') }}" alt="" class="row_poster row_posterLarge m-3">
+      <img src="{{ url_for('static', filename='/Images/img2.png') }}" alt="" class="row_poster row_posterLarge m-3">
+      <img src="{{ url_for('static', filename='/Images/img3.jpg') }}" alt="" class="row_poster row_posterLarge m-3">
+      <img src="{{ url_for('static', filename='/Images/img4.jpg') }}" alt="" class="row_poster row_posterLarge m-3">
+      <img src="{{ url_for('static', filename='/Images/img5.jpg') }}" alt="" class="row_poster row_posterLarge m-3">
+      <img src="{{ url_for('static', filename='/Images/img6.jpg') }}" alt="" class="row_poster row_posterLarge m-3">
+      <img src="{{ url_for('static', filename='/Images/img7.jpg') }}" alt="" class="row_poster row_posterLarge m-3">
 
 
 
-        </div>
     </div>
+  </div>
   </div>
   <!-- Footer -->
   <footer class="text-center text-lg-start  text-muted footer">
@@ -295,9 +262,9 @@
               Suman Biswas <br>
               Software Developer Trainee at Systango
             </p>
-           
-            
-           
+
+
+
           </div>
           <!-- Grid column -->
 
@@ -307,7 +274,7 @@
             <h6 class="text-uppercase fw-bold mb-4">
               Useful links
             </h6>
-            
+
             <p>
               <a href="http://127.0.0.1:5000/registration" class="text-reset">Register</a>
             </p>
@@ -346,7 +313,7 @@
     <!-- Section: Links  -->
 
     <!-- Copyright -->
-    
+
     <!-- Copyright -->
   </footer>
   <!-- Footer -->
